[package]
name = "lang-apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
libsql = "0.4.0"
prost = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
tonic = "0.12.1"




[build-dependencies]
tonic-build = "0.10.2"
